Added color-theory transformations to colors (complementary, triadic, tetradic, analogous, monochromatic, ...)

--- a/src/vois/colorsTest.ipynb
+++ b/src/vois/colorsTest.ipynb
@@ -27,23 +27,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9081dd9d-a676-454c-821f-5e3a765f4498",
+   "id": "09338d26-fe04-4ead-9942-86bdcb466bfe",
    "metadata": {},
    "outputs": [],
    "source": [
     "%run colors.py\n",
-    "complementary(string2rgb('#ff00ff'))"
+    "complementaryColor(string2rgb('#ff00ff'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c768dcea-0cc0-4a8d-942f-a233c8a5973d",
+   "id": "6fc440c6-19f5-4d2e-bbdd-4ec04ce36001",
    "metadata": {},
    "outputs": [],
    "source": [
     "%run colors.py\n",
-    "lighter(string2rgb('#ff0000'), factor=0.6)"
+    "col = randomColor()\n",
+    "paletteImage([col] + [rgb2hex(complementaryColor(string2rgb(col)))], interpolate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05b61caf-eb10-4d63-af46-b01239969447",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run colors.py\n",
+    "col = randomColor()\n",
+    "paletteImage([col] + [rgb2hex(x) for x in triadicColor(string2rgb(col))], interpolate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "264f335f-092d-49f7-9b14-ef90b4758836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run colors.py\n",
+    "col = randomColor()\n",
+    "paletteImage([col] + [rgb2hex(x) for x in splitComplementaryColor(string2rgb(col))], interpolate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12d11a17-af45-4b02-ac09-0822dbe09adb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run colors.py\n",
+    "col = randomColor()\n",
+    "paletteImage([col] + [rgb2hex(x) for x in tetradicColor(string2rgb(col))], interpolate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9977cda3-bcb9-49c6-aa73-667a7f3e5233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run colors.py\n",
+    "col = randomColor()\n",
+    "paletteImage([col] + [rgb2hex(x) for x in analogousColor(string2rgb(col))], interpolate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10c47adf-ac0c-4fa5-92db-df5eba43a769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run colors.py\n",
+    "col = randomColor()\n",
+    "coldarker  = rgb2hex(monochromaticColor(string2rgb(col), increment=-0.25))\n",
+    "collighter = rgb2hex(monochromaticColor(string2rgb(col), increment=0.25))\n",
+    "paletteImage([col, coldarker, collighter], interpolate=False)"
    ]
   },
   {
