Added visual sign of a disabled ColorPicker

--- a/src/vois/vuetify/Tests/colorPickerTest.ipynb
+++ b/src/vois/vuetify/Tests/colorPickerTest.ipynb
@@ -3,19 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c28df0f6-afef-4679-8af5-633d20985ffa",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# To load local vois library with ignore on deprecation warnings\n",
-    "%run ../../development/load_local_vois.py -w"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "9ce88e73",
    "metadata": {
     "tags": []
@@ -24,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8e6581b63ac480caa1993f76b5ffe2a",
+       "model_id": "19dc873f64e24c9b8c3fed814ce0bffb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c50559a3e0a4523a5a828a304baff2c",
+       "model_id": "c053221fa11040db87d6f63673497dcf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -51,6 +38,9 @@
     }
    ],
    "source": [
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
     "from vois.vuetify import colorPicker\n",
     "\n",
     "from ipywidgets import widgets\n",
@@ -70,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "6ffdbc94",
    "metadata": {
     "tags": []
@@ -82,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5f587f2c",
    "metadata": {
     "tags": []
@@ -94,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "81249ebd",
    "metadata": {
     "tags": []
@@ -103,6 +93,14 @@
    "source": [
     "c.disabled = False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "965c2d6d-14d7-4329-91cc-4663027e02a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -121,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
