Added dark_text property to ColorPicker

--- a/src/vois/vuetify/Tests/colorPickerTest.ipynb
+++ b/src/vois/vuetify/Tests/colorPickerTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9ce88e73",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19dc873f64e24c9b8c3fed814ce0bffb",
+       "model_id": "80dd56ec239a4ecab9b0de8174773aae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c053221fa11040db87d6f63673497dcf",
+       "model_id": "8cb7a6280a1b40dba46c9745da19c385",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,7 +52,7 @@
     "    with output:\n",
     "        print('Changed to', c.color)\n",
     "\n",
-    "c = colorPicker.colorPicker(color='#00AAFF', width=30, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False)\n",
+    "c = colorPicker.colorPicker(color='#00AAFF', width=50, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False)\n",
     "\n",
     "display(c.draw())\n",
     "display(output)"
@@ -60,20 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6ffdbc94",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "c.color = '#00FF88'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5f587f2c",
+   "execution_count": 7,
+   "id": "cd8f5e55-d870-4a31-af2c-eaf4b30e3b53",
    "metadata": {
     "tags": []
    },
@@ -84,7 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "id": "ac67c6a9-80e0-419e-907f-58f40fa97b8f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "c.dark_text = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "81249ebd",
    "metadata": {
     "tags": []
