--- a/src/vois/vuetify/Tests/pageTest.ipynb
+++ b/src/vois/vuetify/Tests/pageTest.ipynb
@@ -2,12 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d9ea86d9",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7b7ad7d3f4a40ec9ee791b265b82c23",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, Layout\n",
     "\n",
