--- a/src/vois/vuetify/Tests/UploadJsonTest.ipynb
+++ b/src/vois/vuetify/Tests/UploadJsonTest.ipynb
@@ -16,14 +16,15 @@
     "\n",
     "debug = widgets.Output()\n",
     "\n",
-    "%run ../UploadImage.py\n",
+    "%run ../UploadJson.py\n",
     "\n",
-    "def onSelectedImage(imageurl):\n",
+    "def onSelectedJson(jsonitem):\n",
     "    debug.clear_output()\n",
     "    with debug:\n",
-    "        display(v.Img(class_='pa-0 ma-0 mr-2', src=imageurl))\n",
+    "        print(jsonitem['appname'])\n",
+    "        print(jsonitem['title'])\n",
     "\n",
-    "d = UploadImage(output, onOK=onSelectedImage)\n",
+    "d = UploadJson(output, onOK=onSelectedJson, required_attributes=['appname', 'title'], attributes_width=80)\n",
     "d.show()\n",
     "\n",
     "display(debug)"
