--- a/src/vois/vuetify/Tests/pageTest.ipynb
+++ b/src/vois/vuetify/Tests/pageTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "d9ea86d9",
    "metadata": {
     "tags": []
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7b7ad7d3f4a40ec9ee791b265b82c23",
+       "model_id": "b31883ed9f8a423a96add762aa23e69c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,6 +61,23 @@
     "card = p.create()\n",
     "card.class_ = 'pa-4 ma-0'\n",
     "card.children = ['Add here the content of the page']\n",
+    "p.open()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ceaf90f0-d9af-40a4-ac8a-97d84f9ca8df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('../../templates/sample.json') as file:\n",
+    "    state = json.load(file)\n",
+    "    \n",
+    "p.state = state\n",
     "p.open()"
    ]
   },
