--- a/src/vois/vuetify/Tests/iconButtonTest.ipynb
+++ b/src/vois/vuetify/Tests/iconButtonTest.ipynb
@@ -2,12 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "68885700",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba21f7b0dcce463d8a30c0f924655745",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[Item(children=[Tooltip(bottom=True, children=['Test string for tooltip'], color='#999999', layo…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%run iconButton.py\n",
+    "%run ../iconButton.py\n",
     "\n",
     "def onclick():\n",
     "    if b.color == 'red':\n",
@@ -23,9 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4ee8ce35",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "b.disabled = True"
@@ -56,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
