--- a/src/vois/vuetify/Tests/switchTest.ipynb
+++ b/src/vois/vuetify/Tests/switchTest.ipynb
@@ -2,12 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dc373131",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "59c6a05652404ddeb1158675446c075f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[Switch(class_='pa-0 ma-0 ml-3 mt-2 mb-n3', color='#f8bd1a', dense=True, disabled=False, flat=Tr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b3245ea3bea4ac1a7903419a9f2aae8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(width='400px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%run switch.py\n",
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "from vois import cssUtils\n",
+    "\n",
+    "%run ../switch.py\n",
     "\n",
     "from ipywidgets import HTML, widgets, Layout\n",
     "output = widgets.Output(layout=Layout(width='400px'))\n",
@@ -24,6 +60,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "d522105d-5f0f-4caa-a308-49e5c7d30e21",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5f60517a6584823a131c371e2776475",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>.vuetify-styles .v-label {\\n    font-size: 12px;\\n}\\n</style>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cssUtils.switchFontSize(size=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "1eab4f5a",
    "metadata": {},
@@ -34,8 +97,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bc81fc65",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed7cd672974946f2a51210c973dbde40",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>.vuetify-styles .v-label {\\n    font-size: 14px;\\n}\\n</style>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import HTML\n",
+    "from IPython.display import display\n",
+    "\n",
+    "command = '''\n",
+    "<style>.vuetify-styles .v-label {\n",
+    "    font-size: 14px;\n",
+    "}\n",
+    "</style>'''\n",
+    "    \n",
+    "display(HTML(command))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c618eae1-4506-497a-b0c2-d6ef6a3c564d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "be02e522461f455eb746ea92d87bf09c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>.vuetify-styles .v-label {\\n    font-size: 14px;\\n}\\n</style>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from ipywidgets import HTML\n",
+    "from IPython.display import display\n",
+    "\n",
+    "command = '''\n",
+    "<style>.vuetify-styles .v-label {\n",
+    "    font-size: 14px;\n",
+    "}\n",
+    "</style>'''\n",
+    "    \n",
+    "display(HTML(command))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bee4083a-58e4-48a0-8a8e-d88358cf8434",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -57,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
