--- a/src/vois/downloadTest.ipynb
+++ b/src/vois/downloadTest.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e92f4abd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92d14c4688a045c1b5c356f496f7409b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "%run download.py\n",
     "\n",
@@ -32,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1be6fc6b",
    "metadata": {},
    "outputs": [],
@@ -45,6 +32,40 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6d6d064",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Select a filename on which to download a json file\n",
+    "%run development/load_local_vois.py -w\n",
+    "\n",
+    "from vois.vuetify import settings, dialogGeneric\n",
+    "import ipyvuetify as v\n",
+    "\n",
+    "from ipywidgets import widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "output = widgets.Output()\n",
+    "display(output)\n",
+    "\n",
+    "def onOK():\n",
+    "    with output:\n",
+    "        print(filename.v_model)\n",
+    "\n",
+    "filename = v.TextField(label='File name:', autofocus=True, v_model='file1', dense=False, color=settings.color_first, clearable=True, class_=\"pa-0 ma-0 ml-3 mt-3 mr-3\")\n",
+    "\n",
+    "dlg = dialogGeneric.dialogGeneric(title='Save and download current state' , on_ok=onOK, \n",
+    "                                  text='   ', color=settings.color_first, dark=settings.dark_mode,\n",
+    "                                  titleheight=40, width=600,\n",
+    "                                  show=True, addclosebuttons=True, addokcancelbuttons=True,\n",
+    "                                  fullscreen=False, content=[filename], output=output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdb6e253-d277-4e5e-8949-291641ec2b43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -66,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
