--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "b822bbc8",
    "metadata": {
     "tags": []
@@ -11,7 +11,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68b837c1e7b549afb30fb23131fda278",
+       "model_id": "27004df781b34c509d631c779c1886ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49203ea4d2904785a34cc0e0a9a1e87b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "276bf915e9e04f738da3e6cf9b2529cb",
+       "model_id": "5a701f920721423ca90f912d2225ff40",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,6 +63,9 @@
     "settings.button_rounded = True\n",
     "\n",
     "from IPython.display import display\n",
+    "\n",
+    "from vois import download\n",
+    "display(download.output)\n",
     "\n",
     "# Reduce size of the switch label\n",
     "command = '''\n",
@@ -81,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0186103d-de38-453a-b678-451ef30db04d",
    "metadata": {
     "tags": []
@@ -116,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a115707f-19c6-4b2b-aeee-48c682107554",
    "metadata": {
     "tags": []
@@ -151,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7d5114fe-2a19-4a82-8596-2139ae66c6d1",
    "metadata": {
     "tags": []
@@ -183,12 +200,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cd06eb7f-f401-4bba-930f-feffd34322b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'appname': 'My app',\n",
+       " 'title': 'My page',\n",
+       " 'titlecolor': '#0d856d',\n",
+       " 'titledark': True,\n",
+       " 'titleheight': 54,\n",
+       " 'titleimageurl': '',\n",
+       " 'footercolor': '#a0dcd0',\n",
+       " 'footerdark': False,\n",
+       " 'footerheight': 30,\n",
+       " 'copyrighttext': 'European Commission - Joint Research Centre',\n",
+       " 'show_back': True,\n",
+       " 'left_back': True,\n",
+       " 'show_help': True,\n",
+       " 'show_credits': True,\n",
+       " 'logoappurl': 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/BDAP_Logo1024transparent.png',\n",
+       " 'logocreditsurl': 'https://jeodpp.jrc.ec.europa.eu/services/shared/pngs/EC-JRC-logo_horizontal_EN_neg_transparent-background.png',\n",
+       " 'logowidth': 40,\n",
+       " 'creditswidth': 120,\n",
+       " 'transition': 'dialog-bottom-transition'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.page.state = state"
+    "c.page.state"
    ]
   },
   {
