--- a/src/vois/vuetify/Tests/dialogWaitTest.ipynb
+++ b/src/vois/vuetify/Tests/dialogWaitTest.ipynb
@@ -4,10 +4,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "15d0e3a1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run dialogWait.py\n",
+    "%run ../dialogWait.py\n",
     "\n",
     "from ipywidgets import widgets, Layout, HTML\n",
     "from IPython.display import display\n",
@@ -15,14 +17,16 @@
     "out = widgets.Output()\n",
     "display(out)\n",
     "\n",
-    "dlg = dialogWait(text='Please wait for processing to terminate...', height=4, output=out)"
+    "dlg = dialogWait(text='Please wait for processing to terminate...', height=4, output=out, color='#ff0000', dark=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d1efebe7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dlg.close()"
@@ -81,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
