Tests for code generation in PageConfigurator

--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,12 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b822bbc8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a9830521ae414096a4079e5889031ac9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "483fe278016f4ec89c0d4c31abcf3ee7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='\\n<style>.vuetify-styles .v-label {\\n    font-size: 14px;\\n}\\n</style>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "104b5a50c96444cc9bcdc875dee268ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
