Added color theory popup to ColorPicker

--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -38,12 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ba0ed6cb-76c3-46fd-b64d-910f578cccd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b8f7c7f329244928bc09507533af80ba",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../development/load_local_vois.py -w\n",
+    "\n",
+    "from vois.vuetify import settings\n",
+    "settings.color_first    = '#0d856d'\n",
+    "settings.color_second   = '#a0dcd0'\n",
+    "settings.button_rounded = True\n",
+    "settings.dark_mode      = False\n",
     "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
     "from IPython.display import display\n",
@@ -68,7 +89,7 @@
     "    # Create the content of the Left panel\n",
     "    def createLeft(self):\n",
     "        # Create a sample widget\n",
-    "        lab = v.Html(tag='div', children=['Place here you widgets:'], class_='pa-0 ma-0 ml-4 mt-4 mb-4')\n",
+    "        lab = v.Html(tag='div', children=['Place here you widgets:'], class_='pa-0 ma-0 ml-4 mt-4 mb-3')\n",
     "        sw  = switch.switch(True, \"Sample switch\", inset=True, dense=True, onchange=None)\n",
     "        \n",
     "        # Add widgets to Left card\n",
