--- a/src/vois/vuetify/Tests/colorPickerTest.ipynb
+++ b/src/vois/vuetify/Tests/colorPickerTest.ipynb
@@ -11,12 +11,38 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80dd56ec239a4ecab9b0de8174773aae",
+       "model_id": "f7843645522b4ec1b6a15f84e87ee423",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "colorPicker(children=[ColorPicker(canvas_height=100.0, class_='pa-0 ma-0', dark=False, flat=True, hide_canvas=…"
+       "Card(children=[HBox(children=(ColorPicker(children=[ColorPicker(canvas_height=100.0, class_='pa-0 ma-0', dark=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7843645522b4ec1b6a15f84e87ee423",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[HBox(children=(ColorPicker(children=[ColorPicker(canvas_height=100.0, class_='pa-0 ma-0', dark=…"
       ]
      },
      "metadata": {},
@@ -25,7 +51,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cb7a6280a1b40dba46c9745da19c385",
+       "model_id": "80e8e40ee2624e7c846cc33ad3245b64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,63 +67,118 @@
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../../development/load_local_vois.py -w\n",
     "\n",
-    "from vois.vuetify import colorPicker\n",
+    "%run ../ColorPicker.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
+    "import ipyvuetify as v\n",
     "\n",
     "output = widgets.Output()\n",
     "\n",
     "def onchange():\n",
     "    with output:\n",
-    "        print('Changed to', c.color)\n",
+    "        print('Changed to', cp.color)\n",
     "\n",
-    "c = colorPicker.colorPicker(color='#00AAFF', width=50, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False)\n",
-    "\n",
-    "display(c.draw())\n",
+    "cp = ColorPicker(color='#00AAFF', width=50, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False, color_theory_popup=True)\n",
+    "card = v.Card(flag=True, children=[widgets.HBox([cp, cp.ctpopup.draw()])])\n",
+    "display(card)\n",
+    "print('')\n",
+    "print('')\n",
+    "print('')\n",
+    "print('')\n",
+    "print('')\n",
+    "print('')\n",
+    "display(card)\n",
     "display(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cd8f5e55-d870-4a31-af2c-eaf4b30e3b53",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "c.disabled = True"
+    "cp.disabled = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ac67c6a9-80e0-419e-907f-58f40fa97b8f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "c.dark_text = True"
+    "cp.dark_text = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "81249ebd",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "c.disabled = False"
+    "cp.disabled = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "02a56e4d-f02c-419a-94ea-64df2190b95b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cp.ctpopup.popup.btn.v_model = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b4b8e09d-c665-4499-90f2-7b6f5b9e6c44",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'menuData807565.on'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cp.ctpopup.popup.btn.v_on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c0950312-6722-4c50-9959-4cd16383183a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cp.ctpopup.popup.menu.v_model = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "965c2d6d-14d7-4329-91cc-4663027e02a8",
+   "id": "f3e1e0b4-750a-46c4-bc98-90f8db72f1ca",
    "metadata": {},
    "outputs": [],
    "source": []
