--- a/src/vois/vuetify/Tests/popupTest.ipynb
+++ b/src/vois/vuetify/Tests/popupTest.ipynb
@@ -4,17 +4,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9a19a4d6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
     "# Icon-only popup\n",
     "from vois.vuetify import treeview\n",
     "\n",
     "from ipywidgets import widgets\n",
     "out = widgets.Output()\n",
-    "display(out)\n",
     "\n",
-    "%run popup.py\n",
+    "%run ../popup.py\n",
     "\n",
     "treecard = treeview.createTreeviewFromList(['S%d'%x for x in range(10)],\n",
     "                                           rootName='All',\n",
@@ -24,22 +27,39 @@
     "    with out:\n",
     "        print(data)\n",
     "\n",
-    "p = popup(treecard, 'test', icon='mdi-car', popupheight=270, icon_small=False, icon_large=False, \n",
+    "p = popup(treecard, 'test', icon='mdi-car', color='red', popupheight=270, icon_small=False, icon_large=False, \n",
     "          rounded=True, outlined=False, margintop=0, text=True, buttonwidth=34, buttonheight=34, \n",
     "          open_on_hover=False, close_on_click=False, close_on_content_click=False, title='Select a sector:',\n",
     "          show_close_button=True, on_input=on_input)\n",
     "\n",
-    "p.draw()"
+    "display(p.draw())\n",
+    "display(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1178b203-d5a1-41f6-9ee8-f3ab180f0b53",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for p in popup_set:\n",
+    "    print(p.menu.v_model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7ec4a1f2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "p.text = \"new\""
+    "p.disabled = True\n",
+    "p.color = '#aaaaaa'"
    ]
   },
   {
@@ -51,10 +71,18 @@
    "source": [
     "from IPython.display import display\n",
     "\n",
-    "%run popup.py\n",
+    "from ipywidgets import widgets\n",
+    "out = widgets.Output()\n",
+    "display(out)\n",
+    "\n",
+    "%run ../popup.py\n",
     "\n",
     "def on_activated(item):\n",
     "    p.text = item\n",
+    "    \n",
+    "def on_input(flag):\n",
+    "    with out:\n",
+    "        print(flag)\n",
     "    \n",
     "sectors = ['S%d'%x for x in range(10)]\n",
     "treecard = treeview.createTreeviewFromList(sectors,\n",
@@ -64,7 +92,7 @@
     "                                           rootName='Select',\n",
     "                                           height='270px')\n",
     "\n",
-    "p = popup(treecard, 'None', popupheight=270)\n",
+    "p = popup(treecard, 'None', popupheight=270) #, on_input=on_input)\n",
     "\n",
     "display(p.draw())"
    ]
@@ -222,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
