Added colorWheel to colors

--- a/src/vois/vuetify/Tests/colorPickerTest.ipynb
+++ b/src/vois/vuetify/Tests/colorPickerTest.ipynb
@@ -24,7 +24,7 @@
     "    with output:\n",
     "        print('Changed to', cp.color)\n",
     "\n",
-    "cp = ColorPicker(color='#00AAFF', width=50, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False, color_theory_popup=True)\n",
+    "cp = ColorPicker(color='#ff0000', width=50, height=30, rounded=False, onchange=onchange, argument=None, offset_x=True, offset_y=False, color_theory_popup=True)\n",
     "card = v.Card(flag=True, children=[widgets.HBox([cp, cp.ctpopup.draw()])])\n",
     "display(card)\n",
     "display(output)"
