Added rounded property to Button

--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -45,10 +45,10 @@
     "            tooltip='Example of an extremely long tooltip text', selected=False, icon='mdi-car-light-high', iconleft=True, iconcolor='#008800', rounded=True)\n",
     "\n",
     "b2 = Button('Test button 2', textweight=450, onclick=onclick, argument=2, width=150, small=False, disabled=False, height=48, outlined=False, \n",
-    "            tooltip='Example of an extremely long tooltip text', selected=True, rounded=False, tile=True,\n",
+    "            tooltip='Example of an extremely long tooltip text', selected=True, rounded=False, tile=False,\n",
     "            colorselected=settings.color_first, colorunselected='green')\n",
     "\n",
-    "b3 = Button('Contacts', onlytext=True, textcolor=settings.color_first, width=150, height=28, href='https://ec.europa.eu/info/contact_en', target=\"_blank\", tooltip='Open a URL')\n",
+    "b3 = Button('Contacts', onlytext=True, textcolor=settings.color_first, width=150, height=28, href='https://ec.europa.eu/info/', target=\"_blank\", tooltip='Open a URL')\n",
     "\n",
     "display(b1)\n",
     "display(b2.draw())\n",
@@ -64,7 +64,9 @@
    },
    "outputs": [],
    "source": [
-    "b1.dark = False"
+    "b1.dark = False\n",
+    "b1.rounded = False\n",
+    "b2.rounded = True"
    ]
   },
   {
