Changed settings usage on Button

--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ba0ed6cb-76c3-46fd-b64d-910f578cccd5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8f7c7f329244928bc09507533af80ba",
+       "model_id": "cad3377d3bcd4520a14a4d88f8ee350c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,15 +61,15 @@
     "%run ../development/load_local_vois.py -w\n",
     "\n",
     "from vois.vuetify import settings\n",
-    "settings.color_first    = '#0d856d'\n",
-    "settings.color_second   = '#a0dcd0'\n",
+    "settings.color_first    = '#1976D2'\n",
+    "settings.color_second   = '#78ccff'\n",
     "settings.button_rounded = True\n",
-    "settings.dark_mode      = False\n",
+    "settings.dark_mode      = True\n",
     "\n",
     "from ipywidgets import widgets, HTML, Layout\n",
     "from IPython.display import display\n",
     "from vois import cssUtils\n",
-    "from vois.vuetify import switch\n",
+    "from vois.vuetify import switch, Button\n",
     "from vois.templates import template1panel, template2panels, template3panels\n",
     "import ipyvuetify as v\n",
     "\n",
@@ -88,19 +88,31 @@
     "\n",
     "    # Create the content of the Left panel\n",
     "    def createLeft(self):\n",
-    "        # Create a sample widget\n",
+    "\n",
+    "        # Create sample widgets\n",
+    "        spacer  = v.Html(tag='div', style_='width: 10px; height: 10px;')\n",
     "        lab = v.Html(tag='div', children=['Place here you widgets:'], class_='pa-0 ma-0 ml-4 mt-4 mb-3')\n",
     "        sw  = switch.switch(True, \"Sample switch\", inset=True, dense=True, onchange=None)\n",
+    "        b   = Button('Sample button with icon and tooltip', on_click=None, width=360, height=36,\n",
+    "                     tooltip='Tooltip for button', selected=True, icon='mdi-cogs')\n",
     "        \n",
     "        # Add widgets to Left card\n",
-    "        self.cardLeft.children = [widgets.VBox([lab, sw.draw()])]\n",
+    "        self.cardLeft.children = [widgets.VBox([lab, \n",
+    "                                                sw.draw(), \n",
+    "                                                spacer,\n",
+    "                                                widgets.HBox([spacer, b])\n",
+    "                                               ])]\n",
     "\n",
     "        \n",
     "# Create an instance of mypage\n",
     "p = mypage(output)\n",
     "p.create()\n",
     "\n",
-    "# Set the state of the page\n",
+    "# Read the state of the page from .json file\n",
+    "with open('aaa.json') as f:\n",
+    "    p.state = json.load(f)\n",
+    "    \n",
+    "aaa = '''# Set the state of the page\n",
     "p.state = {\n",
     "     'appname': 'FAIRMODE',\n",
     "     'title': 'Concentration models',\n",
@@ -126,9 +138,10 @@
     "     'creditswidth': 180,\n",
     "     'transition': 'dialog-bottom-transition'\n",
     "}\n",
+    "'''\n",
     "\n",
     "# Open the page\n",
-    "p.open()        "
+    "p.open()"
    ]
   },
   {
