--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -10,7 +10,18 @@
    "outputs": [],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
-    "%run ../../development/load_local_vois.py -w"
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "from vois.vuetify import settings\n",
+    "settings.color_first    = '#1976D2'\n",
+    "settings.color_second   = '#78ccff'\n",
+    "settings.button_rounded = False\n",
+    "settings.dark_mode      = True\n",
+    "\n",
+    "from vois.vuetify import Button\n",
+    "\n",
+    "b = Button('Sample button with icon and tooltip', on_click=None, width=360, height=42, tooltip='Tooltip for button', selected=True, icon='mdi-cogs')\n",
+    "b"
    ]
   },
   {
@@ -46,7 +57,8 @@
     "\n",
     "b2 = Button('Test button 2', textweight=450, onclick=onclick, argument=2, width=150, small=False, disabled=False, height=48, outlined=False, \n",
     "            tooltip='Example of an extremely long tooltip text', selected=True, rounded=False, tile=False,\n",
-    "            colorselected=settings.color_first, colorunselected='green')\n",
+    "           )\n",
+    "            #colorselected=settings.color_first, colorunselected='green')\n",
     "\n",
     "b3 = Button('Contacts', onlytext=True, textcolor=settings.color_first, width=150, height=28, href='https://ec.europa.eu/info/', target=\"_blank\", tooltip='Open a URL')\n",
     "\n",
