Managed icon_color None in Button

--- a/src/vois/vuetify/Tests/buttonTest.ipynb
+++ b/src/vois/vuetify/Tests/buttonTest.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "from vois.vuetify import Button\n",
     "\n",
-    "b = Button('Sample button with icon and tooltip', on_click=None, width=360, height=42, tooltip='Tooltip for button', selected=True, icon='mdi-cogs')\n",
+    "b = Button('Sample button with icon and tooltip', width=360, height=42, tooltip='Tooltip for button', selected=True, icon='mdi-cogs')\n",
     "b"
    ]
   },
