Added color property to selectSingle

--- a/src/vois/templates/PageConfiguratorTest.ipynb
+++ b/src/vois/templates/PageConfiguratorTest.ipynb
@@ -2,39 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b822bbc8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec5ee6eeff7d4521a167e1afa7c3715e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', min_height='0px', min_width='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e1e9d919c4a437b962019d1c78b0ba3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# To load local vois library with ignore on deprecation warnings\n",
     "%run ../development/load_local_vois.py -w\n",
     "\n",
-    "from ipywidgets import widgets, HTML, Layout\n",
-    "from vois.vuetify import settings, popup\n",
+    "from vois.vuetify import settings\n",
     "settings.dark_mode      = True\n",
     "settings.color_first    = '#0d856d'\n",
     "settings.color_second   = '#a0dcd0'\n",
     "settings.button_rounded = True\n",
     "\n",
+    "from ipywidgets import widgets, HTML, Layout\n",
     "from IPython.display import display\n",
     "\n",
-    "from vois import download\n",
+    "from vois import download, cssUtils\n",
     "display(download.output)\n",
-    "\n",
-    "# Reduce size of the switch label\n",
-    "command = '''\n",
-    "<style>.vuetify-styles .v-label {\n",
-    "    font-size: 14px;\n",
-    "}\n",
-    "</style>'''\n",
-    "display(HTML(command))\n",
-    "\n",
     "\n",
     "output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
     "display(output)\n",
+    "\n",
+    "cssUtils.allSettings(output)\n",
+    "cssUtils.switchFontSize(output,14)\n",
     "\n",
     "%run PageConfigurator.py\n",
     "\n",
