--- a/src/vois/vuetify/Tests/selectSingleTest.ipynb
+++ b/src/vois/vuetify/Tests/selectSingleTest.ipynb
@@ -4,10 +4,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "203b68c3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "%run selectSingle.py\n",
+    "# To load local vois library with ignore on deprecation warnings\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "%run ../selectSingle.py\n",
     "\n",
     "from ipywidgets import widgets\n",
     "output = widgets.Output()\n",
@@ -21,7 +26,7 @@
     "    sys.path.append(module_path)\n",
     "\n",
     "# List of EU country names and codes\n",
-    "import eucountries as eu\n",
+    "from vois import eucountries as eu\n",
     "names = eu.countries.EuropeanUnionNames()\n",
     "codes = eu.countries.EuropeanUnionCodes()\n",
     "\n",
@@ -195,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
