--- a/src/vois/templates/template1panelTest.ipynb
+++ b/src/vois/templates/template1panelTest.ipynb
@@ -38,25 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ba0ed6cb-76c3-46fd-b64d-910f578cccd5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7e6db1300964a3fb3744639fa7def61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../development/load_local_vois.py -w\n",
     "\n",
@@ -88,20 +73,20 @@
     "\n",
     "    # Clicked the application logo\n",
     "    def on_logoapp(self):\n",
-    "        dialogMessage.dialogMessage(title=self.appname,\n",
-    "                                    text='''Text to customise for info on the application<br>Add text here or open a PDF file''',\n",
+    "        dialogMessage.dialogMessage(title='Info on ' + self.appname, titleheight=36,\n",
+    "                                    text='Text to customise for info on the application<br>Add text here or open a PDF file',\n",
     "                                    addclosebuttons=True, show=True, width=400, output=self.output)\n",
     "        \n",
     "    # Clicked the \"Help\" button\n",
     "    def on_help(self):\n",
-    "        dialogMessage.dialogMessage(title='Help',\n",
-    "                                    text='''Text to customise for the application help<br>Add text here or open a PDF file''',\n",
+    "        dialogMessage.dialogMessage(title='Help', titleheight=36,\n",
+    "                                    text='Text to customise for the application help<br>Add text here or open a PDF file',\n",
     "                                    addclosebuttons=True, show=True, width=400, output=self.output)\n",
     "    \n",
     "    # Clicked the credits logo\n",
     "    def on_credits(self):\n",
-    "        dialogMessage.dialogMessage(title=self.appname,\n",
-    "                                    text='''Text to customise for the credits info<br>Add text here or open a PDF file''',\n",
+    "        dialogMessage.dialogMessage(title='Credits for ' + self.appname, titleheight=36,\n",
+    "                                    text='Text to customise for the credits info<br>Add text here or open a PDF file',\n",
     "                                    addclosebuttons=True, show=True, width=400, output=self.output)\n",
     "        \n",
     "    # Create the content of the Main panel\n",
@@ -110,6 +95,7 @@
     "\n",
     "    # Create the content of the Left panel\n",
     "    def createLeft(self):\n",
+    "        super().createLeft()\n",
     "\n",
     "        # Create sample widgets\n",
     "        spacer  = v.Html(tag='div', style_='width: 10px; height: 10px;')\n",
